@@ -1,3 +1,4 @@
+11 Jul 2002 New optional HTTPROOT control file statement - Fish
 09 Jul 2002 Minor fix to OPTION_CPU_UTILIZATION to fix FISH_HANG issue - Fish
 02 Jul 2002 Fixes to ckdtab in dasdtab.c - Greg Smith
 02 Jul 2002 Correct Erase All Unprotected 3270 order - Tomas Fott
